tasksel (2.07) UNRELEASED; urgency=low

  * Translations
    - Kęstutis Biliūnas
      - Updated Lithuanian translation of tasks.

 -- Kęstutis Biliūnas <kebil@kaunas.init.lt>  Thu, 15 Jul 2004 18:05:48 +0300

tasksel (2.06) unstable; urgency=medium

  * Joey Hess
    - Switch mozilla to mozilla-browser.
    - Run aptitude --without-recommends when noninteractively installing
      tasks, since tasks should be usable w/o recommends and recommends may
      pull in unintended packages.
  * Kenshi Muto
    - Modified Japanese and Japanese-desktop (moved X applications to
      Japanese-desktop)
  * Translations
    - André Luís Lopes
      - Updated Brazilian Portuguese tasks translation.

 -- Joey Hess <joeyh@debian.org>  Wed, 14 Jul 2004 19:13:52 -0400

tasksel (2.05) unstable; urgency=low

  * Joey Hess
    - Add support for inter-task dependencies.
    - Add a bunch of lang-desktop tasks, will be auto-installed if the desktop
      task and given language are installed. Closes: #202907, #257863
    - Add a Swedish task by Per Olofsson. Closes: #251536
  * Translations
    - André Luís Lopes
      - Updated Brazilian Portuguese translation.

 -- Joey Hess <joeyh@debian.org>  Wed, 14 Jul 2004 15:31:32 -0400

tasksel (2.04) unstable; urgency=low

  * Matt Kraai
    - Fix typos in warning and error functions. Closes: #256774
  * Joey Hess
    - Remove -a option in usage help until it's re-implemented. Closes: #257986
    - Remove -a and -q from man page.
  * Translations
    - Jordi Mallach
      - Updated Catalan translation of tasks.
    - Javier Fernandez-Sanguino
      - Updated Spanish translation
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation.
    - Kęstutis Biliūnas
      - Updated Lithuanian translation of tasks.

 -- Joey Hess <joeyh@debian.org>  Mon, 28 Jun 2004 21:13:08 -0400

tasksel (2.03) unstable; urgency=low

  * Otavio Salvador
    - Add brazilian-portuguese task.
    - Fix how aptitude is called when using manual selection. 