@@ -1,5 +1,8 @@
 tasksel (2.07) UNRELEASED; urgency=low
 
+  * Joey Hess
+    - Add --list-tasks switch.
+    - Document --new-install and long format switches.
   * Translations
     - Kęstutis Biliūnas
       - Updated Lithuanian translation of tasks.
